--- a/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
+++ b/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
@@ -32,7 +32,7 @@
     }
 
     &__get-a-quote {
-        h3 {
+                h3 {
             margin: 0;
             margin-top: 32px;
             @media (max-width: $desktop) {
@@ -47,42 +47,67 @@
                 flex-wrap: wrap;
                 column-gap: 16px;
                 input[type=text] {
-                    width: calc(50% - 8px);
+                    width: calc(50% - 8px) !important;
                     margin-right: 0;
                     &:nth-child(3) {
-                        width: calc(65% - 8px);
+                        width: calc(65% - 8px) !important;
                     }
                     &:nth-child(4) {
-                        width: calc(35% - 8px);
+                        width: calc(35% - 8px) !important;
                     }
                 }
             }
             @media (max-width: 375px) {
                 display: block;
                 input[type=text] {
-                    width: 100%;
+                    width: 100% !important;
                     &:nth-child(3) {
-                        width: 100%;
+                        width: 100% !important;
                     }
                     &:nth-child(4) {
-                        width: 100%;
+                        width: 100% !important;
                     }
                 }
             }
         }
-        input[type=text] {
-            width: 232px;
+        input[type=text], input[type=email], input[type=tel] {
+            width: 232px !important;
             margin-right: 25px;
             margin-top: 24px;
             @media (max-width: 1200px) {
-                width: 180px;
+                width: 180px !important;
+            }
+            @media (max-width: 650px) {
+                width: 100% !important;
             }
             &:nth-child(3) {
                 width: 309px;
             }
             &:last-of-type {
                 margin: 0;
-                margin-top: 24px;
+                margin-top: 0;
+            }
+        }
+        .inputs-container {
+            p {
+                display: flex !important;
+                flex-wrap: wrap;
+                @media (max-width: 650px) {
+                    display: flex !important;
+                    flex-direction: column;
+                    width: 100%;
+                    margin-top: 24px;
+                    span {
+                      width: 100%;
+                    }
+                }
+                span {
+                    margin-right: 24px;
+                    margin-top: 24px;
+                    @media (max-width: 650px) {
+                        margin-top: 0;
+                    }
+                }
             }
         }
         .requirements {
@@ -133,10 +158,10 @@
         }
         .event {
             display: flex;
+            margin-top: 24px;
 
-            @media (max-width: $mobile) {
-                justify-content: space-between;
-                column-gap: 16px;
+            @media (max-width: 500px) {
+                display: block;
             }
 
             @media (max-width: 375px) {
@@ -144,19 +169,57 @@
                 display: block;
             }
 
+            p {
+                display: flex;
+                align-items: flex-start;
+            }
+
+            .dropdown-quote-container {
+                display: none !important;
+            }
+
+            span.wpcf7-form-control-wrap {
+                @media (max-width: 500px) {
+                    width: 100%;
+                    margin-right: 0 !important;
+                    margin-top: 24px;
+                }
+            }
+
             .select-wrapper {
-                margin-top: 24px;
                 width: 234px;
                 margin-right: 25px;
 
-                @media (max-width: $mobile) {
-                    width: calc(50% - 8px);
-                    margin: 0;
-                    margin-top: 24px;
+                @media (max-width: 500px) {
+                    width: 100%;
                 }
 
-                @media (max-width: 375px) {
+                p {
                     width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    z-index: 1;
+                    span {
+                        width: 100%;
+                    }
+                }
+
+                .custom-options {
+                    p {
+                        display: block;
+
+                        br {
+                            display: none;
+                        }
+                    }
+                }
+
+                svg {
+                    position: absolute;
+                    right: 10px;
+                    z-index: 0;
+                    pointer-events: none;
                 }
             }
 
@@ -175,6 +238,32 @@
                     width: 100%;
                 }
             }
+
+            .wpcf7-form-control-wrap {
+                margin-right: 16px;
+            }
+        }
+        .submit-container {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            p {
+                display: block;
+            }
+            input.wpcf7-form-control.wpcf7-submit.has-spinner.primary-button, input.wpcf7-form-control.wpcf7-submit.has-spinner.primary-button
+            {
+                background-color: #70b095;
+                color: #fff;
+                border-radius: 10px; 
+                font-size: 16px;
+                font-weight: 400;
+                padding: 9px 24px;
+                display: block;
+                width: -moz-fit-content;
+                width: fit-content !important;
+                transition: .25s;
+                margin-right: 0;
+            }
         }
         .newsletter {
             display: flex;
@@ -188,6 +277,20 @@
             }
             @media (max-width: 300px) {
                 display: block;
+            }
+            input[type=checkbox] {
+                margin: 0 0.2em 0 0;
+            }
+            span {
+                @media (max-width: 600px) {
+                    margin-top: 10px;
+
+                    span.wpcf7-form-control.wpcf7-radio {
+                        display: flex;
+                        flex-wrap: wrap;
+                        justify-content: center;
+                    }
+                }
             }
             p {
                 font-family: $montserrat;
@@ -208,13 +311,6 @@
                 margin-right: 16px;
                 margin-top: 16px;
 
-                input[type=checkbox] {
-                    margin: 0 0.2em 0 0;
-                    &::before {
-                        top: 60%;
-                    }
-                }
-
                 label {
                     margin: 0;
                     font-family: $montserrat;
@@ -233,6 +329,17 @@
                 }
             }
         }
+        .container-captcha {
+            margin-top: 24px;
+            display: flex;
+            justify-content: center;
+        }
+        .wpcf7 form .wpcf7-response-output {
+            border-radius: 10px;
+            text-align: center;
+            font-family: $montserrat;
+        }
+        
     }
     button[type=submit] {
         margin: 0 auto;
