client review part 2

--- a/storefront-child/build_assets/scss/blocks/_shop.scss
+++ b/storefront-child/build_assets/scss/blocks/_shop.scss
@@ -638,6 +638,9 @@
                 &:hover {
                     border: 2px solid $seaFoam;
                 }
+                &.dots {
+                    border: none !important;
+                }
             }
 
             .next, .prev {
