--- a/storefront-child/build_assets/scss/blocks/_footer.scss
+++ b/storefront-child/build_assets/scss/blocks/_footer.scss
@@ -162,6 +162,175 @@
             padding: 0 16px;
         }
 
+        ._form_element._x52926670._inline-style._clear {
+            display: none;
+        }
+
+        ._form_element._x60924079._inline-style._clear {
+            display: none;
+        }
+
+        ._form-branding {
+            display: none;
+        }
+
+        label._form-label {
+            display: none !important;
+        }
+
+        ._inline-form {
+            padding: 0 !important;
+            margin: 0 !important;
+            background: transparent !important;
+        }
+
+        ._inline-style input[type=text] {
+            width: 180px;
+        }
+
+        ._button-wrapper._inline-style {
+            margin: 0 !important;
+        }
+
+        #_form_66019D695F739_ ._form_element {
+            margin-bottom: 0 !important;
+        }
+
+        ._form-content {
+            display: flex;
+            align-items: center;
+            margin: 0 auto !important;
+
+            @media (max-width: 740px) {
+                display: flex;
+                flex-wrap: wrap;
+                max-width: 392px;
+                margin: 0 auto;
+                align-items: center;
+            }
+
+            @media (max-width: 320px) {
+                display: block;
+            }
+        }
+
+        ._form_element._x52926670._inline-style._clear {
+            display: none !important;
+        }
+
+        ._form_element._x60924079._inline-style._clear {
+            display: none !important;
+        }
+
+        ._form_element {
+            margin: 0 !important;
+        }
+
+        #form3 ._form._form_3 {
+            background: transparent !important;
+            #_form_3_submit {
+                width: 86px !important;
+                height: 38px !important;
+                background: $seaFoam !important;
+                color: $white !important;
+                border-radius: 10px !important;
+                font-size: 16px !important;
+                font-weight: 400 !important;
+                padding: 7px 17px !important;
+                transition: .25s !important;
+
+                @media (max-width: 740px) {
+                    width: 100% !important;
+                }
+            }
+            ._inline-style._x12360387 {
+                @media (min-width: 320px) and (max-width: 667px) {
+
+                    margin-right: 15px !important;
+                }
+            }
+        }
+
+        ._button-wrapper._inline-style {
+            @media (max-width: 740px) {
+                order: 3 !important;
+                width: calc(35% - 8px) !important;
+                margin-left: 8px !important;
+            }
+            @media (max-width: 320px) {
+                width: 100% !important;
+                margin-left: 0 !important;
+                display: flex !important;
+                justify-content: center !important;
+            }
+
+        }
+
+        #fullname {
+            width: 180px !important;
+            margin: 0 !important;
+            margin-right: 15px !important;
+            color: $black !important;
+            background-color: $white !important;
+            border: 2px solid $mercury !important;
+            border-radius: 10px !important;
+            font-family: $montserrat !important;
+            font-size: 16px !important;
+            box-shadow: none !important;
+            padding: 16px !important;
+            height: 42px !important;
+            @media (max-width: 740px) {
+                width: 100% !important;
+            }
+        }
+
+        ._form_element._x12360387 {
+            @media (max-width: 740px) {
+                order: 2 !important;
+                margin-right: 16px !important;
+                width: calc(65% - 8px) !important; /* Set name input to take up 70% width minus half of the gap */
+                margin-right: 8px !important;
+            }
+            @media (max-width: 320px) {
+                width: 100% !important;
+            }
+        }
+
+        #email {
+            width: 190px !important;
+            margin-right: 9px !important;
+            color: $black !important;
+            background-color: $white !important;
+            border: 2px solid $mercury !important;
+            border-radius: 10px !important;
+            font-family: $montserrat !important;
+            font-size: 16px !important;
+            box-shadow: none !important;
+            padding: 16px !important;
+            height: 42px !important;
+
+            @media (max-width: 740px) {
+                width: 100% !important;
+            }
+        }
+
+        ._form_element._x18238600 {
+            @media (max-width: 740px) {
+                order: 1 !important;
+                width: 100% !important;
+                margin-bottom: 16px !important;
+                margin-right: 0 !important;
+            }
+
+            @media (max-width: $mobile) {
+                margin-right: 0 !important;
+            }
+
+            @media (max-width: 320px) {
+                width: 100% !important;
+            }
+        }
+
         form {
             margin-bottom: 0;
             @media (max-width: 740px) {
