client review part 3

--- a/storefront-child/build_assets/scss/blocks/_contact-form.scss
+++ b/storefront-child/build_assets/scss/blocks/_contact-form.scss
@@ -80,7 +80,6 @@
         }
         input {
             width: 232px !important;
-            margin-right: 25px;
             margin-top: 24px;
             &:nth-child(3) {
                 width: 309px;
@@ -96,6 +95,17 @@
                 width: 100% !important;
             }
 
+        }
+        span.wpcf7-not-valid-tip {
+            margin-top: 10px;
+            width: 100% !important;
+            text-align: center;
+        }
+        .container-captcha .wpcf7-not-valid-tip {
+            width: 100% !important;
+            font-family: $montserrat !important;
+            font-size: 0.7em !important;
+            font-weight: normal !important;
         }
         textarea {
             margin-top: 24px;
@@ -284,7 +294,6 @@
         }
         input[type=text], input[type=email], input[type=tel] {
             width: 232px !important;
-            margin-right: 25px;
             margin-top: 24px;
             @media (max-width: 1200px) {
                 width: 180px !important;
@@ -321,6 +330,19 @@
                     }
                 }
             }
+        }
+        span.wpcf7-not-valid-tip {
+            margin-top: 10px !important;
+            width: 100% !important;
+            text-align: center;
+            font-size: 0.6em !important;
+            margin-right: 0 !important;
+        }
+        .container-captcha .wpcf7-not-valid-tip {
+            width: 100% !important;
+            font-family: $montserrat !important;
+            font-size: 0.7em !important;
+            font-weight: normal !important;
         }
         .requirements {
             width: 70%;
