--- a/storefront-child/build_assets/scss/blocks/_checkout.scss
+++ b/storefront-child/build_assets/scss/blocks/_checkout.scss
@@ -116,7 +116,7 @@ li.select2-results__option.select2-results__option--highlighted {
     transition: max-height 0.6s ease-in, opacity 1.2s ease-in;
 }
 #payment.open {
-    max-height: 600px;
+    max-height: 900px;
     transition: max-height 0.3s ease-in, opacity 0.6s ease-in;
 }
 .container-shipping-table.open {
@@ -133,20 +133,32 @@ li.select2-results__option.select2-results__option--highlighted {
 .woocommerce-checkout-review-order-table {
     position: absolute;
     right: 40px;
-    z-index: -1;
+    z-index: 0;
     top: calc(var(--heightCheckoutWindow) + 24px);
     @media (max-width: 767px) {
-        display: none;
+        width: calc(100% - 64px) !important;
+        left: 32px;
+        top: 0 !important;
     }
     tfoot {
         border-radius: 24px !important;
         .order-total {
+            border-radius: 24px !important;
             td {
                 text-align: right;
                 padding: 38px 24px 24px 0;
+                @media (max-width: 767px) {
+                    width: calc(100% - 64px) !important;
+                    left: 32px;
+                    top: 0 !important;
+                    border-radius: 0 24px 0 0!important;
+                }
             }
             th {
                 padding: 38px 0 24px 24px;
+                @media (max-width: 767px) {
+                    border-radius: 20px 0 0 0 !important;
+                }
             }
         }
         .fee {
@@ -616,6 +628,7 @@ table.woocommerce-checkout-review-order-table .product-name {
     }
     @media (max-width: 767px) {
         width: 100% !important;
+        margin-top: 200px;
     }
 }
 .woocommerce-additional-fields h3 {
@@ -641,6 +654,8 @@ table.woocommerce-checkout-review-order-table .product-total {
     margin: 0 auto;
     padding: 0 40px;
     &__container {
+        position: relative;
+        z-index: 1;
         float: right;
         clear: right;
         width: 450px;
@@ -1176,4 +1191,24 @@ input[type=radio]:before, input[type=checkbox]:before {
             }
         }
     }
+}
+
+.woocommerce-thankyou-order-details {
+    .woocommerce-Price-amount {
+        display: block !important;
+    }
+}
+
+.woocommerce-order-details {
+    .woocommerce-Price-amount {
+        display: block !important;
+    }
+}
+
+.woocommerce-order {
+    margin-top: 110px;
+}
+
+.woocommerce-message {
+    display: none;
 }
