--- a/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
+++ b/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
@@ -88,6 +88,19 @@
                 margin-top: 0;
             }
         }
+        span.wpcf7-not-valid-tip {
+            margin-top: 10px !important;
+            width: 100% !important;
+            text-align: center;
+            font-size: 0.6em !important;
+            margin-right: 0 !important;
+        }
+        .container-captcha .wpcf7-not-valid-tip {
+            width: 100% !important;
+            font-family: $montserrat !important;
+            font-size: 0.7em !important;
+            font-weight: normal !important;
+        }
         .inputs-container {
             p {
                 display: flex !important;
