--- a/storefront-child/build_assets/scss/blocks/_footer.scss
+++ b/storefront-child/build_assets/scss/blocks/_footer.scss
@@ -242,10 +242,11 @@
                 @media (max-width: 740px) {
                     width: 100% !important;
                 }
-
-                &:hover {
-                    box-shadow: inset 0 0 0 2em $white;
-                    color: $seaFoam !important;
+                @media (min-width: 768px) {
+                    &:hover {
+                        box-shadow: inset 0 0 0 2em $white;
+                        color: $seaFoam !important;
+                    }
                 }
             }
             ._inline-style._x12360387 {
@@ -398,10 +399,11 @@
                 font-weight: $p-regular-weight;
                 padding: 7px 17px;
                 transition: 0.25s;
-                
-                &:hover {
-                    box-shadow: inset 0 0 0 2em $white;
-                    color: $seaFoam;
+                @media (min-width: 768px) {
+                    &:hover {
+                        box-shadow: inset 0 0 0 2em $white;
+                        color: $seaFoam;
+                    }
                 }
 
                 &:focus {
