--- a/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
+++ b/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
@@ -144,8 +144,10 @@
         margin-top: 32px;
         text-decoration: none !important;
         transition: 0.25s;
-        &:hover {
-            box-shadow: inset 0 0 0 2em $mercury !important;
+        @media (min-width: 768px) {
+            &:hover {
+                box-shadow: inset 0 0 0 2em $mercury !important;
+            }
         }
         &:focus {
             outline: none !important;
