--- a/storefront-child/build_assets/scss/blocks/_hero.scss
+++ b/storefront-child/build_assets/scss/blocks/_hero.scss
@@ -191,9 +191,11 @@
                 }
 
                 .primary-button {
-                    &:hover {
-                        box-shadow: inset 0 0 0 2em $white;
-                        color: black;
+                    @media (min-width: 768px) {
+                        &:hover {
+                            box-shadow: inset 0 0 0 2em $white;
+                            color: black;
+                        }
                     }
                 }
             }
@@ -1017,8 +1019,32 @@
                     background-size: cover;
                     background-position: center center;
                     border-radius: 20px;
+                    z-index: 1;
+                }
+
+
+                p {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    z-index: 0;
+                    font-size: 16px;
+                    font-weight: 500;
+                    width: 60%;
+                    color: white;
+                    text-align: center;
+                    opacity: 0;
+                    transition: opacity 0.5s ease;
                     &:hover {
-                        filter: grayscale(100%);
+                        color: black;
+                    }
+                }
+
+                &:hover {
+                    p {
+                        z-index: 2;
+                        opacity: 1;
                     }
                 }
 
