--- a/storefront-child/build_assets/scss/blocks/_single-product.scss
+++ b/storefront-child/build_assets/scss/blocks/_single-product.scss
@@ -183,6 +183,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            color: black;
         }
         .woocommerce-Price-amount{
             display: flex !important;
@@ -191,6 +192,7 @@
             font-size: 16px;
             font-weight: 400;
             color: black;
+            margin-left: 5px !important;
         }
     }
 }
@@ -550,8 +552,10 @@ input[type="tel"]:focus,input[type="email"]:focus{
     line-height: normal;
     letter-spacing: -0.32px;
     transition: 0.25s;
-    &:hover {
-        box-shadow: inset 0 0 0 2em $mercury !important;
+    @media (min-width: 768px) {
+        &:hover {
+            box-shadow: inset 0 0 0 2em $mercury !important;
+        }
     }
     &:focus {
         outline: none !important;
@@ -1011,9 +1015,11 @@ input[type="tel"]:focus,input[type="email"]:focus{
         .hentry .entry-content a.button {
             margin-top: 10px;
             transition: 0.25s;
-            &:hover {
-                box-shadow: inset 0 0 0 2em $white !important;
-                color: $seaFoam;
+            @media (min-width: 768px) {
+                &:hover {
+                    box-shadow: inset 0 0 0 2em $white !important;
+                    color: $seaFoam;
+                }
             }
         }
         h2, .le-form {
@@ -1282,11 +1288,6 @@ input[type="tel"]:focus,input[type="email"]:focus{
 .woocommerce-cart {
     .woocommerce{
         padding-bottom: 0px !important;
-    }
-    .delivery-banner {
-        @media (max-width: 768px) {
-            margin-top: 64px;
-        }
     }
 }
 
