--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -88,13 +88,14 @@ body {
     display: block;
     width: fit-content;
     transition: 0.25s;
-
-    &:hover {
-        box-shadow: inset 0 0 0 2em $mercury;
-    }
-
-    &:active, &:focus {
-        background-color: $seaFoam;
+    @media (min-width: 768px) {
+        &:hover {
+            box-shadow: inset 0 0 0 2em $mercury;
+        }
+    
+        &:active, &:focus {
+            background-color: $seaFoam;
+        }
     }
 }
 
@@ -107,15 +108,16 @@ body {
     padding: 16px 24px;
     border: 2px $mercury solid;
     transition: 0.25s;
+    @media (min-width: 768px) {
+        &:hover {
+            box-shadow: inset 0 0 0 2em $mercury;
+            border: 2px $seaFoam solid;
+        }
 
-    &:hover {
-        box-shadow: inset 0 0 0 2em $mercury;
-        border: 2px $seaFoam solid;
-    }
-
-    &:active, &:focus, &.active {
-        background-color: $mercury;
-        border: 2px $mercury solid;
+        &:active, &:focus, &.active {
+            background-color: $mercury;
+            border: 2px $mercury solid;
+        }
     }
 }
 
