--- a/storefront-child/build_assets/scss/blocks/_checkout.scss
+++ b/storefront-child/build_assets/scss/blocks/_checkout.scss
@@ -163,17 +163,35 @@ li.select2-results__option.select2-results__option--highlighted {
         .fee {
             td {
                 text-align: right;
+                padding: 38px 24px 24px 0;
                 span {
                     font-size: 16px !important;
                     color: black !important;
                     font-family: $montserrat !important;
+                    @media (max-width: 900px) {
+                        font-size: 14px !important;
+                    }
+                }
+                @media (max-width: 900px) {
+                    font-size: 14px !important;
+                }
+                @media (max-width: 768px) {
+                    padding: 25px 24px 0px 0;
                 }
             }
             th {
+                padding: 38px 0 24px 24px;
                 font-size: 16px !important;
                 color: black !important;
                 font-family: $montserrat !important;
                 font-weight: 400 !important;
+                @media (max-width: 900px) {
+                    font-size: 14px !important;
+                    padding: 38px 0 24px 24px;
+                }
+                @media (max-width: 768px) {
+                    padding: 25px 0 0px 24px;
+                }
             }
         }
     }
