--- a/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
+++ b/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
@@ -168,8 +168,6 @@
         cursor: pointer;
         position: relative;
         margin: 0px 20px;
-        transition: filter 0.7s;
-        filter: grayscale(0%);
         @media (max-width: 1260px) {
             width: 173px;
             height: 196px;
@@ -217,10 +215,6 @@
             top:0px;
             left:0px;
         }
-        &:hover{
-            transition: filter 0.7s;
-            filter: grayscale(100%);
-        }
         &--custom{
             p{
                 text-align: center;
@@ -252,6 +246,38 @@
         border-radius: 30px;
         overflow: hidden;
         position: relative;
+        
+        img {
+            position: relative;
+            z-index: 1;
+        }
+
+
+        p {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 0;
+            font-size: 16px;
+            font-weight: 500;
+            width: 60%;
+            color: white;
+            text-align: center;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+            &:hover {
+                color: black;
+            }
+        }
+
+        &:hover {
+            p {
+                z-index: 2;
+                opacity: 1;
+            }
+        }
+        
         @media (max-width: 1260px) {
             width: 173px;
             height: 173px;
