--- a/storefront-child/build_assets/scss/blocks/_checkout.scss
+++ b/storefront-child/build_assets/scss/blocks/_checkout.scss
@@ -172,9 +172,6 @@ li.select2-results__option.select2-results__option--highlighted {
                         font-size: 14px !important;
                     }
                 }
-                @media (max-width: 900px) {
-                    font-size: 14px !important;
-                }
                 @media (max-width: 768px) {
                     padding: 25px 24px 0px 0;
                 }
@@ -326,7 +323,7 @@ input {
 .checkout-review-order__container {
     border-radius: 20px 20px 0 0;
     background-color: $mercury;
-    padding: 24px;
+    padding: 24px 24px 17px 24px;
     h2 {
         font-size: 18px;
         font-weight: 500;
@@ -336,6 +333,7 @@ input {
         display: flex;
         position: relative;
         margin-bottom: 16px;
+        height: fit-content;
         img {
             width: 74px;
             height: 74px;
@@ -360,10 +358,18 @@ input {
             @media (max-width: 1030px) {
                 width: 100%;
             }
-            @media (max-width: 980px) {
+            @media (max-width: 1100px) {
                 font-size: 14px;
             }
             @media (max-width: 900px) {
+                font-size: 12px;
+            }
+
+            @media (max-width: 870px) {
+                font-size: 9px;
+            }
+
+            @media (max-width: 768px) {
                 font-size: 12px;
             }
 
@@ -1023,6 +1029,7 @@ tfoot .cart-subtotal {
     width: 100%;
     margin: 0 auto;
     padding: 0 40px;
+    height: 100vh;
 
     @media (max-width: 1020px) {
         padding: 0 32px;
