--- a/storefront-child/build_assets/scss/blocks/_legal.scss
+++ b/storefront-child/build_assets/scss/blocks/_legal.scss
@@ -70,6 +70,16 @@
             h2, p {
                 text-align: left;
             }
+
+            p, li {
+                font-size: 16px;
+                font-family: $montserrat;
+                color: black;
+            }
+
+            ul, ol {
+                margin: 0 0 1em 1em;
+            }
         
             h2 {
                 margin: 0 0 32px 0;
