--- a/storefront-child/build_assets/scss/blocks/_single-product.scss
+++ b/storefront-child/build_assets/scss/blocks/_single-product.scss
@@ -1354,6 +1354,10 @@ bdi::before {
     align-items: center;
 }
 
+.return-to-shop {
+    height: 100vh;
+}
+
 @media only screen and (max-width: 1200px){
     .product-image__feature{
         width: 460px;
