--- a/storefront-child/build_assets/scss/blocks/_header.scss
+++ b/storefront-child/build_assets/scss/blocks/_header.scss
@@ -642,6 +642,17 @@
                 .pages-container {
                     display: flex;
                     flex-wrap: wrap;
+                    display: none;
+                    height: 90px;
+                    overflow: auto;
+                    &.open {
+                        display: flex;
+                    }
+
+                    @media (max-width: 450px) {
+                        height: 87px;
+                        margin-bottom: 20px;
+                    }
 
                     p {
                         margin-right: 20px;
@@ -649,6 +660,13 @@
                         font-weight: 300;
                         margin-bottom: 24px;
                         display: none;
+                        @media (max-width: 768px) {
+                            text-align: left;
+                        }
+                        @media (max-width: 450px) {
+                            margin-left: 0;
+                            font-size: 14px;
+                        }
                         a {
                             position: relative;
                         }
